map65/commons.h

  extern int manualDecodeFlag ;
  int get_nfcal();
  int get_nfshift();
  int get_mcall3();
  int get_ntimeout();
  int get_ntol();
  int get_nxant();
  int get_map65RxLog();
  int get_nfsample();
  int get_nxpol();
  int get_nmode();
  int get_nsave();
  int get_max_drift();
  int get_nhsym();
  void set_fcenter(double);
  void set_map65RxLog(int);
  void set_nutc(int);
  void set_nkeep(int);
  void set_ndop00(int);
  void set_idphi(int);
  void set_mousedf(int);
  void set_mousefqso(int);
  void set_nagain(int);
  void set_ndepth(int);
  void set_ndiskdat(int);
  void set_neme(int);
  void set_newdat(int);
  void set_nfa(int);
  void set_nfb(int);
  void set_nfcal(int);
  void set_nfshift(int);
  void set_mcall3(int);
  void set_ntimeout(int);
  void set_ntol(int);
  void set_nxant(int);
  void set_nfsample(int);
  void set_nxpol(int);
  void set_nmode(int);
  void set_nsave(int);
  void set_max_drift(int);
  void set_nhsym(int);
  void set_mycall(const char*);
  void set_hiscall(const char*);
  void set_mygrid(const char*);
  void set_hisgrid(const char*);
  void set_datetime(const char*);
  std::int64_t publish_decode_request();