map65/libm65/npar_ptrs_mod.f90


  function get_nfcal() bind(C, name="get_nfcal")
    integer(c_int) :: get_nfcal
    call lock_decode_requests()
    get_nfcal = draft%nfcal
    call unlock_decode_requests()
  end function

  function get_nfshift() bind(C, name="get_nfshift")
    integer(c_int) :: get_nfshift
    call lock_decode_requests()
    get_nfshift = draft%nfshift
    call unlock_decode_requests()
  end function

  function get_mcall3() bind(C, name="get_mcall3")
    integer(c_int) :: get_mcall3
    call lock_decode_requests()
    get_mcall3 = draft%mcall3
    call unlock_decode_requests()
  end function

  function get_ntimeout() bind(C, name="get_ntimeout")
    integer(c_int) :: get_ntimeout
    call lock_decode_requests()
    get_ntimeout = draft%ntimeout
    call unlock_decode_requests()
  end function

  function get_ntol() bind(C, name="get_ntol")
    integer(c_int) :: get_ntol
    call lock_decode_requests()
    get_ntol = draft%ntol
    call unlock_decode_requests()
  end function

  function get_nxant() bind(C, name="get_nxant")
    integer(c_int) :: get_nxant
    call lock_decode_requests()
    get_nxant = draft%nxant
    call unlock_decode_requests()
  end function

  function get_nfsample() bind(C, name="get_nfsample")
    integer(c_int) :: get_nfsample
    call lock_decode_requests()
    get_nfsample = draft%nfsample
    call unlock_decode_requests()
  end function

  function get_nxpol() bind(C, name="get_nxpol")
    integer(c_int) :: get_nxpol
    call lock_decode_requests()
    get_nxpol = draft%nxpol
    call unlock_decode_requests()
  end function

  function get_nmode() bind(C, name="get_nmode")
    integer(c_int) :: get_nmode
    call lock_decode_requests()
    get_nmode = draft%nmode
    call unlock_decode_requests()
  end function

  function get_nsave() bind(C, name="get_nsave")
    integer(c_int) :: get_nsave
    call lock_decode_requests()
    get_nsave = draft%nsave
    call unlock_decode_requests()
  end function

  function get_max_drift() bind(C, name="get_max_drift")
    integer(c_int) :: get_max_drift
    call lock_decode_requests()
    get_max_drift = draft%max_drift
    call unlock_decode_requests()
  end function

  function get_nhsym() bind(C, name="get_nhsym")
    integer(c_int) :: get_nhsym
    call lock_decode_requests()
    get_nhsym = draft%nhsym
    call unlock_decode_requests()
  end function  

  subroutine set_fcenter(val) bind(C, name="set_fcenter")
  use iso_c_binding
  real(c_double), value :: val
    call lock_decode_requests()
  draft%fcenter = val
    call unlock_decode_requests()
  end subroutine
  
  subroutine set_nkeep(val) bind(C, name="set_nkeep")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nkeep = val
    call unlock_decode_requests()
  end subroutine
  
  subroutine set_ndop00(val) bind(C, name="set_ndop00")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%ndop00 = val
    call unlock_decode_requests()
  end subroutine
  
  subroutine set_map65RxLog(val) bind(C, name="set_map65RxLog")
    use iso_c_binding
    integer(c_int), value :: val
    ! map65RxLog is read back by get_map65RxLog() for debug logging only.
    ! nrxlog is the variable m65c()/decode0.f90 actually check (iand bits
    ! 1/2/4/8) to write the date header, rewind map65_rx.log, clear the
    ! decode-history file on Erase, and force manual dPhi. Before this fix
    ! nrxlog was never assigned anywhere, so all four of those flag bits
    ! were permanently dead -- e.g. Erase Band Map and Messages never
    ! actually cleared unit 26, so the next display() cycle just replayed
    ! the full decode history back into the Messages window.
    call lock_decode_requests()
    draft%map65RxLog = val
    draft%nrxlog = val
    call unlock_decode_requests()
  end subroutine
  
  subroutine set_nutc(val) bind(C, name="set_nutc")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nutc = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_idphi(val) bind(C, name="set_idphi")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%idphi = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_mousedf(val) bind(C, name="set_mousedf")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%mousedf = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_mousefqso(val) bind(C, name="set_mousefqso")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%mousefqso = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nagain(val) bind(C, name="set_nagain")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nagain = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_ndepth(val) bind(C, name="set_ndepth")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%ndepth = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_ndiskdat(val) bind(C, name="set_ndiskdat")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%ndiskdat = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_neme(val) bind(C, name="set_neme")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%neme = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_newdat(val) bind(C, name="set_newdat")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%newdat = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nfa(val) bind(C, name="set_nfa")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nfa = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nfb(val) bind(C, name="set_nfb")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nfb = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nfcal(val) bind(C, name="set_nfcal")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nfcal = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nfshift(val) bind(C, name="set_nfshift")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nfshift = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_mcall3(val) bind(C, name="set_mcall3")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%mcall3 = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_ntimeout(val) bind(C, name="set_ntimeout")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%ntimeout = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_ntol(val) bind(C, name="set_ntol")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%ntol = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nxant(val) bind(C, name="set_nxant")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nxant = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nfsample(val) bind(C, name="set_nfsample")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nfsample = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nxpol(val) bind(C, name="set_nxpol")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nxpol = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nmode(val) bind(C, name="set_nmode")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nmode = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nsave(val) bind(C, name="set_nsave")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nsave = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_max_drift(val) bind(C, name="set_max_drift")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%max_drift = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_nhsym(val) bind(C, name="set_nhsym")
    use iso_c_binding
    integer(c_int), value :: val
    call lock_decode_requests()
    draft%nhsym = val
    call unlock_decode_requests()
  end subroutine

  subroutine set_mycall(buf) bind(C, name="set_mycall")
    use iso_c_binding
    character(kind=c_char), intent(in) :: buf(12)
    integer :: i
    call lock_decode_requests()
    do i = 1, 12
      draft%mycall(i:i) = buf(i)
    end do
    call unlock_decode_requests()
  end subroutine

  subroutine set_hiscall(buf) bind(C, name="set_hiscall")
    use iso_c_binding
    character(kind=c_char), intent(in) :: buf(12)
    integer :: i
    call lock_decode_requests()
    do i = 1, 12
      draft%hiscall(i:i) = buf(i)
    end do
    call unlock_decode_requests()
  end subroutine

  subroutine set_mygrid(buf) bind(C, name="set_mygrid")
    use iso_c_binding
    character(kind=c_char), intent(in) :: buf(6)
    integer :: i
    call lock_decode_requests()
    do i = 1, 6
      draft%mygrid(i:i) = buf(i)
    end do
    call unlock_decode_requests()
  end subroutine

  subroutine set_hisgrid(buf) bind(C, name="set_hisgrid")
    use iso_c_binding
    character(kind=c_char), intent(in) :: buf(6)
    integer :: i
    call lock_decode_requests()
    do i = 1, 6
      draft%hisgrid(i:i) = buf(i)
    end do
    call unlock_decode_requests()
end subroutine

subroutine set_datetime(buf) bind(C, name="set_datetime")
  use iso_c_binding
  character(kind=c_char), intent(in) :: buf(17)
  integer :: i
    call lock_decode_requests()
  do i = 1, 17
    draft%datetime(i:i) = buf(i)
  end do
    call unlock_decode_requests()
end subroutine

  function publish_decode_request() result(request_id) bind(C)
    integer(c_int64_t) :: request_id
    type(decode_request), pointer :: request

    allocate(request)
    call lock_decode_requests()
    published_request_id = published_request_id + 1
    request_id = published_request_id
    request%id = request_id
    request%input_generation = live_input_generation
    request%parameters = draft
    request%parameters%newdat = 1
    if (associated(pending_tail)) then
      pending_tail%next => request
    else
      pending_head => request
    endif
    pending_tail => request
    decoder_ready = 1
    draft%manualDecodeFlag = 0
    call unlock_decode_requests()
  end function

  logical function claim_decode_request()
    type(decode_request), pointer :: request

    call lock_decode_requests()
    claim_decode_request = decoder_ready /= 0 .and. associated(pending_head)
    if (claim_decode_request) then
      request => pending_head
      pending_head => request%next
      if (.not. associated(pending_head)) nullify(pending_tail)
      active = request%parameters
      active_request_id = request%id
      active_input_generation = request%input_generation
      active_request_expired = active%ndiskdat == 0 .and. active%nagain == 0 .and. &
        active%manualDecodeFlag == 0 .and. request%input_generation /= live_input_generation
      deallocate(request)
    endif
    call unlock_decode_requests()
  end function

  subroutine initialize_decode_parameters()
    call lock_decode_requests()
    active = draft
    call unlock_decode_requests()
  end subroutine
